[touch: 705] fixes z-index for fab, adds routes.

--- a/resources/assets/sass/fab.scss
+++ b/resources/assets/sass/fab.scss
@@ -7,6 +7,7 @@
 }
 
 .FAB {
+  z-index: 999;
   position: fixed;
   bottom: 30px;
   right: 60px;
